fix(console): long text should wrap in code editor

--- a/packages/console/src/components/CodeEditor/index.module.scss
+++ b/packages/console/src/components/CodeEditor/index.module.scss
@@ -36,10 +36,9 @@
       background: none;
       font-size: 14px;
       line-height: 1.5;
-      font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+      font-family: 'Roboto Mono', monospace;
       white-space: pre-wrap;
-      word-break: keep-all;
-      overflow-wrap: break-word;
+      word-break: break-all;
       position: absolute;
       inset: 0;
       resize: none;
